force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Used to hold Person Account&apos;s property informations.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>