force-app/main/default/objects/Property__c/fields/Basement__c.field-meta.xml
<CustomField>
    <fullName>Basement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basement</label>
    <type>Checkbox</type>
</CustomField>