force-app/main/default/objects/Property__c/fields/Fireplace__c.field-meta.xml
<CustomField>
    <fullName>Fireplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fireplace</label>
    <type>Checkbox</type>
</CustomField>