force-app/main/default/objects/Property__c/fields/Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size__c</fullName>
    <label>Lot Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>