force-app/main/default/objects/Property__c/fields/Of_Baths__c.field-meta.xml
<CustomField>
    <fullName>Of_Baths__c</fullName>
    <label>Baths</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>