force-app/main/default/objects/Property__c/fields/Of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Of_Beds__c</fullName>
    <description>No of Beds</description>
    <label>Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>