force-app/main/default/objects/Property__c/fields/Patio__c.field-meta.xml
<CustomField>
    <fullName>Patio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patio</label>
    <type>Checkbox</type>
</CustomField>