force-app/main/default/objects/Property__c/fields/Roofing__c.field-meta.xml
<CustomField>
    <fullName>Roofing__c</fullName>
    <label>Roofing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>