force-app/main/default/objects/Property__c/fields/SQFT__c.field-meta.xml
<CustomField>
    <fullName>SQFT__c</fullName>
    <label>SQFT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>