force-app/main/default/objects/Property__c/validationRules/ValidateAddressAndPropertyRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAddressAndPropertyRule</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW()</errorConditionFormula>
    <errorDisplayField>Address__c</errorDisplayField>
    <errorMessage>Already this address has the property</errorMessage>
</ValidationRule>